# MiniArc

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  sfx-gen.sh  sonar.cmake
Assets/: arcade.map  arcade.txt
inc/: BackgroundStars.hpp  Enemies.hpp  GameConfig.hpp  GoodyItem.hpp  HealthBar.hpp  MiniArc.hpp  PlayerShip.hpp  UILayer.hpp
sdlc/: CMakeLists.txt
sdlc/inc/: AnimatedSprite.hpp  AppEntry.hpp  AppLayer.hpp  AppState.hpp  AudioDataBuffer.hpp  AudioDevice.hpp  AudioStream.hpp  CSVParser.hpp  ColorConverter.hpp  Config.hpp  ConfigFile.hpp  Dimension.hpp  DynamicPool.hpp  FontRenderer.hpp  Keyboard.hpp  MathFunc.hpp  Painter.hpp  PathHelper.hpp  PoolItem.hpp  Random.hpp  Rect.hpp  ResPtr.hpp  SpriteRenderer.hpp  StaticPool.hpp  StopWatch.hpp  TextInput.hpp  Timer.hpp  Utility.hpp  Vector2.hpp
sdlc/src/: AnimatedSprite.cpp  AppEntry.cpp  AppLayer.cpp  AudioDataBuffer.cpp  AudioStream.cpp  CSVParser.cpp  ColorConverter.cpp  ConfigFile.cpp  FontRenderer.cpp  Keyboard.cpp  Painter.cpp  PathHelper.cpp  SpriteRenderer.cpp  TextInput.cpp  Timer.cpp  Utility.cpp
sfx/: alien-shot.xml  charged-shot.xml  charging.xml  explosion.xml  game-over.xml  generate.sh  hit-effect.xml  laser-shot.xml  pickup.xml  sonar-script.xsd  spawn-effect.xml
src/: BackgroundStars.cpp  Enemies.cpp  GoodyItem.cpp  HealthBar.cpp  HiScore.cpp  MiniArc.cpp  PlayerShip.cpp  UILayer.cpp
